--- a/src/components/common/navbar/style.css
+++ b/src/components/common/navbar/style.css
@@ -12,7 +12,7 @@
   flex-direction: column;
   align-items: center;
   padding: 1rem;
-  margin-right: 10vh;
+  margin-right: 3vw;
 }
 .logout-wrapper {
   width: 100%;
