--- a/src/components/common/toolsbar/style.css
+++ b/src/components/common/toolsbar/style.css
@@ -1,87 +1,75 @@
 .toolbar-wrapper {
-  width: auto;
-  min-width: 20%;
-  height: 100%;
-  padding: 1rem;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  box-sizing: border-box;
-  position: relative;
-}
-
-.icon-wrapper {
-  position: absolute;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 10px;
-  background-color: white;
-  border-radius: 2rem;
-  box-shadow: 0 0 10px 2px rgb(0, 183, 255);
-  box-sizing: border-box;
-}
-
-.tools {
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  border-radius: 10vw;
-  border-radius: 10vw;
-  box-shadow: 0 0 10px 2px skyblue;
+  position: relative;
+  width: 100%;
+  height: 10%;
   box-sizing: border-box;
+}
+
+/* setting icon spin css */
+.icon-wrapper {
+  display: flex;
+  padding: 1.5vh;
+  align-items: center;
+  justify-content: center;
+  border-radius: 25vw;
+  background-color: white;
+  box-shadow: 0 0 10px 2px rgb(0, 183, 255);
+  position: absolute;
+}
+.spin-open {
+  animation: animName 1s linear infinite;
+}
+.spin-close {
+  animation: animNameClose 1s linear infinite;
+}
+@keyframes animName {
+  0% {
+    transform: rotate(360deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
+@keyframes animNameClose {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+/* div css on click icon */
+.tools {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
   width: 0%;
   overflow: hidden;
-  transition: all 1s;
+  box-shadow: 0 0 10px 2px rgb(0, 183, 255);
+  transition: all 2s ease-in-out;
+  visibility: hidden;
+  border-radius: 10vw 10vw 10vw 10vw;
+  padding: 4px;
+  margin-left: 10px;
+  position: relative;
 }
-.close-arrow {
+.open {
+  visibility: visible;
+  flex: 1;
+  width: auto;
+}
+.tool {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-left: auto;
+  box-sizing: border-box;
+  margin-right: auto;
 }
-.tools.open {
-  padding: 4px;
-  padding-right: 5vw;
-  width: 100%;
-}
-
-.tool {
-  padding: 2px 4px;
-  margin-right: 5px;
-  border-radius: 20vw;
-}
-
 .tool:hover {
-  background-color: yellowgreen;
-}
-
-.spin-open {
-  animation: spin-open 1s infinite;
-}
-
-.spin-close {
-  animation: spin-close 1s infinite;
-}
-
-.toggle-none {
-  display: none;
-  width: 2px;
-}
-
-@keyframes spin-open {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@keyframes spin-close {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
-  }
+  color: greenyellow;
 }
