--- a/src/components/layout/main-layout/style.css
+++ b/src/components/layout/main-layout/style.css
@@ -13,10 +13,24 @@
   height: 10vh;
   min-height: 50px;
 }
-
-.layout-wrapper {
+.main-layout-wrapper-mobile {
   box-sizing: border-box;
-  width: 75%;
-  height: 90vh;
+  width: 100vw;
+  height: 100vh;
+  padding: 1rem;
+}
+.col-1 {
+  display: flex;
+  width: 77vw;
+  flex-direction: column;
+}
+.col-1-mobile {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+}
+.child-wrapper {
   overflow: auto;
+  padding: 1rem;
 }
